fixed spacing on social media buttons

--- a/less/agency.less
+++ b/less/agency.less
@@ -614,6 +614,7 @@ footer {
 ul.social-buttons {
     margin-bottom: 0;
     li {
+        margin: 60px 0 40px 0;
         a {
             display: flex;
             justify-content: center;
